# Semana

./: .gitignore  Cargo.toml  LICENSE  README.adoc  build.rs  gdbtest.sh
.githooks/: pre-commit
benchmarking/: Cargo.toml
benchmarking/benches/: obtain.rs
crates/application/: Cargo.toml  build.rs
crates/application/src/: date.rs  error.rs  main.rs  render.rs  sdlext.rs  state.rs
crates/application/src/state/: calendar_state.rs
crates/calendar/: Cargo.toml
crates/calendar/src/: date.rs  lib.rs  obtain.rs  render.rs  types.rs  ui.rs
crates/sdl3-sys/: Cargo.toml  build.rs
crates/sdl3-sys/src/: lib.rs
crates/sdl3-ttf-sys/: Cargo.toml  build.rs
crates/sdlext/: Cargo.toml
crates/sdlext/src/: lib.rs
